config/prow/aws/manifests/sinker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: sinker
  labels:
    app: sinker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sinker
  template:
    metadata:
      labels:
        app: sinker
    spec:
      serviceAccountName: "sinker"
      containers:
      - name: sinker
        image: gcr.io/k8s-prow/sinker:v20240805-37a08f946
        args:
        - --config-path=/etc/config/config.yaml
        - --job-config-path=/etc/job-config
        # - --kubeconfig=/etc/kubeconfig/config
        - --dry-run=false
        ports:
        - name: metrics
          containerPort: 9090
        resources:
          limits:
            cpu: 100m
            memory: 256M
          requests:
            cpu: 100m
            memory: 256M
        volumeMounts:
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        # - name: kubeconfig
        #   mountPath: /etc/kubeconfig
        #   readOnly: true
      volumes:
        # - name: kubeconfig
        #   secret:
        #     defaultMode: 420
        #     secretName: kubeconfig
        - name: config
          configMap:
            name: config
        - name: job-config
          configMap:
            name: job-config
      nodeSelector:
        Archtype: "x86"
