config/prow/aws/manifests/needs-rebase.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: needs-rebase
spec:
  selector:
    app: needs-rebase
  ports:
  - port: 80
    targetPort: 8888
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: needs-rebase
  labels:
    app: needs-rebase
spec:
  replicas: 0
  selector:
    matchLabels:
      app: needs-rebase
  template:
    metadata:
      labels:
        app: needs-rebase
    spec:
      terminationGracePeriodSeconds: 180
      containers:
      - name: needs-rebase
        image: gcr.io/k8s-prow/needs-rebase:v20240805-37a08f946
        imagePullPolicy: Always
        args:
        - --dry-run=false
        - --github-endpoint=http://ghproxy
        - --github-endpoint=https://api.github.com
        ports:
          - name: http
            containerPort: 8888
        resources:
          limits:
            cpu: 100m
            memory: 256M
          requests:
            cpu: 100m
            memory: 256M
        volumeMounts:
        - name: hmac
          mountPath: /etc/webhook
          readOnly: true
        - name: oauth
          mountPath: /etc/github
          readOnly: true
        - name: plugins
          mountPath: /etc/plugins
          readOnly: true
      volumes:
      - name: hmac
        secret:
          secretName: hmac-token
      - name: oauth
        secret:
          secretName: oauth-token
      - name: plugins
        configMap:
          name: plugins
      nodeSelector:
        Archtype: "x86"
