config/prow/aws/manifests/tide.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: tide
  labels:
    app: tide
spec:
  selector:
    app: tide
  ports:
  - name: main
    port: 80
    targetPort: 8888
  - name: metrics
    port: 9090
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: tide
  labels:
    app: tide
spec:
  replicas: 0
  selector:
    matchLabels:
      app: tide
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tide
    spec:
      serviceAccountName: "tide"
      containers:
      - name: tide
        image: gcr.io/k8s-prow/tide:v20240805-37a08f946
        args:
        - --dry-run=false
        - --config-path=/etc/config/config.yaml
        - --job-config-path=/etc/job-config
        - --github-token-path=/etc/github/oauth
        - --github-endpoint=http://ghproxy
        - --github-endpoint=https://api.github.com
        - --github-graphql-endpoint=http://ghproxy/graphql
        - --s3-credentials-file=/etc/s3-credentials/service-account.json
        - --status-path=s3://falco-prow-logs/tide-status
        - --history-uri=s3://falco-prow-logs/tide-history.json
        ports:
          - name: http
            containerPort: 8888
          - name: metrics
            containerPort: 9090
        resources:
          limits:
            cpu: 100m
            memory: 256M
          requests:
            cpu: 100m
            memory: 256M
        volumeMounts:
        - name: oauth
          mountPath: /etc/github
          readOnly: true
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        - name: s3-credentials
          mountPath: /etc/s3-credentials
          readOnly: true
      volumes:
      - name: oauth
        secret:
          secretName: oauth-token
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
      - name: s3-credentials
        secret:
          secretName: s3-credentials
      nodeSelector:
        Archtype: "x86"
